[tool.poetry]
name = "pubmed-paper-fetcher"
version = "0.1.0"
description = "Fetch research papers from PubMed and save them as CSV files."
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
pandas = "^1.5.0"

[tool.poetry.scripts]
get-papers-list = "pubmed_fetcher.get_papers:main"
